--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "start": "node index.html",
-    "build": "react-scripts build",
+    "start": "npm start",
+    "build": "npm install",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
